--- a/ansible/ansible/roles/software/consul/templates/consul.sh.j2
+++ b/ansible/ansible/roles/software/consul/templates/consul.sh.j2
@@ -1,7 +1,7 @@
 #!/bin/bash
 # {{ ansible_managed }}
 
-bind_addr = {{ ansible_eth1.ipv4.address }}
+bind_addr = "{{ ansible_eth1.ipv4.address }}"
 data_dir = "/opt/consul"
 client_addr = "0.0.0.0"
 ui = true
