--- a/ansible/ansible/roles/software/nomad/templates/nomad.sh.j2
+++ b/ansible/ansible/roles/software/nomad/templates/nomad.sh.j2
@@ -1,7 +1,7 @@
 #!/bin/bash
 # {{ ansible_managed }}
 
-bind_addr = {{ ansible_eth1.ipv4.address }}
+bind_addr = "{{ ansible_eth1.ipv4.address }}"
 data_dir = "/opt/nomad"
 log_level = "DEBUG"
 
@@ -15,6 +15,7 @@ log_level = "DEBUG"
     client {
         enabled = true
         servers = ["192.168.1.2"]
+        network_interface = "eth1"
     }
 
     {% if ansible_hostname == 'CLIENT1' %}
