--- a/ansible/ansible/roles/software/nomad/templates/nomad.sh.j2
+++ b/ansible/ansible/roles/software/nomad/templates/nomad.sh.j2
@@ -5,6 +5,14 @@ bind_addr = "{{ ansible_eth1.ipv4.address }}"
 data_dir = "/opt/nomad"
 log_level = "DEBUG"
 
+telemetry {
+  collection_interval = "1s"
+  disable_hostname = true
+  prometheus_metrics = true
+  publish_allocation_metrics = true
+  publish_node_metrics = true
+}
+
 {% if ansible_hostname == 'SERVER' %}
     name = "server"
     server {
